# libAudioData

./: AudioDataConfig.h.in  CMakeLists.txt  License.txt  README.md  audiodata.c  audiodata.h  test_audiodata.c
bindings/java/: CMakeLists.txt  org_phash_AudioData.cpp  org_phash_AudioData.h  pom.xml
bindings/java/src/main/java/org/phash/: AudioData.java  AudioMetaData.java
bindings/java/src/test/java/org/phash/: TestAudio.java
